Fix modal spacing height

--- a/src/components/Global/Modal/Modal.module.css
+++ b/src/components/Global/Modal/Modal.module.css
@@ -86,7 +86,7 @@
 
 @media only screen and (min-width: 500px) {
     .modal_body {
-        margin: auto;
+        top: 8rem;
         min-width: 400px;
     }
 }
